feature: news recommendation notebook

--- a/notebooks/fake_news.ipynb
+++ b/notebooks/fake_news.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BAGHDAD (Reuters) - Kurdish Peshmerga fighters rejected a warning from an Iraqi  paramilitary force to withdraw from a strategic junction south of the oil-rich city of Kirkuk, a Kurdish security official told Reuters on Sunday. Popular Mobilisation, formed mainly by Iranian-trained Shi ite groups, gave the Peshmerga until midnight local time (2100 GMT Saturday) to leave a position north of the Maktab Khalid junction, the official from the Kurdistan Regional Government s (KRG) Security Council said.  The position controls the access to an airbase and some of the oilfields located in the region of Kirkuk, the official said. The city and its immediate surroundings, including the oilfields, are under Kurdish control. There were no clashes reported about an hour after the deadline, but a resident said dozens of young Kurds deployed around Kirkuk with machine guns as the news of the warning spread. The KRG and the Shi ite-led central government in Baghdad are at loggerheads since a Kurdish independence referendum held last month in northern Iraq. Kurdish authorities said on Friday they had sent thousands more troops to Kirkuk to confront Iraqi  threats.   Iraqi Prime Minister Haider al-Abadi has repeatedly denied any plans to attack the Kurds. Popular Mobilisation is a separate force from the regular army and officially reports to Abadi. It is deployed alongside the army south and west of Kirkuk. Kirkuk, a city of more than one million people, lies just outside KRG territory but Peshmerga forces deployed there in 2014 when Iraqi security forces collapsed in the face of an Islamic State onslaught. The Peshmerga deployment prevented Kirkuk s oilfields from falling into jihadist hands. The Baghdad central government has taken a series of steps to isolate the autonomous Kurdish region since its overwhelming vote for independence in the referendum, including banning international flights from going there. \n",
+      "JOHANNESBURG (Reuters) - South Africa s government is considering a range of budget cuts that could include slashing social grants for the most vulnerable in order to pay for free tertiary education, a newspaper reported on Friday. South Africa s rand weakened on Thursday after comments by President Jacob Zuma raised concerns about higher spending on education, which would put added strain on the country s already stretched public finances.  The Mail & Guardian newspaper said a presidential fiscal committee had presented a document to Zuma outlining possible cuts to fund free higher education for lower-income students as well as plugging a swelling budget deficit.  Options included cuts to the social grants that are the main source of income for around 17 million people - a third of the population - and slashing the budgets for housing, infrastructure and the armed forces. A freeze on civil servant wage hikes was also on the cards, the newspaper reported. The Presidency and Treasury did not immediately respond to requests for comment. Violent protests by students and activists demanding free tuition rocked several South African universities last year, underlying tensions in a country marred by glaring income disparities defined largely by race. South Africa is staring down the barrel of ratings downgrades after the Treasury last month widened the 2017/18 budget deficit estimate to 4.3 percent of gross domestic product while lowering this year s economic growth forecast to 0.7 percent from 1.3 percent. \n",
       "Fake: False\n"
      ]
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -234,15 +234,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vp mike pence pappas bbq houston pictwittercom occwnodkx edith gonzalez edithge_ february   watch crowd towards end cheering president bush barbara bush hear loud cheer vp pence https wwwyoutubecom watchvkfybtggi\n",
-      "Fake: True\n"
+      "brussels reuters israel must halt new building plans settler homes west bank european union foreign service said statement wednesday warning settlements threatened future peace deal palestinians european union requested clarifications israeli authorities conveyed expectation reconsider decisions detrimental ongoing efforts towards meaningful peace talks statement said settlement activity illegal international law undermines viability twostate solution prospect lasting peace eu maintains lands israel occupied since  middle east war including west bank east jerusalem golan heights part internationally recognized borders israel\n",
+      "Fake: False\n"
      ]
     }
    ],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -388,15 +388,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "506/506 [==============================] - 768s 2s/step - loss: 0.1166 - accuracy: 0.9572 - val_loss: 0.1001 - val_accuracy: 0.9674\n",
+      "506/506 [==============================] - 362s 710ms/step - loss: 0.1159 - accuracy: 0.9578 - val_loss: 0.0811 - val_accuracy: 0.9786\n",
       "Epoch 2/5\n",
-      "506/506 [==============================] - 757s 1s/step - loss: 0.0446 - accuracy: 0.9851 - val_loss: 0.0481 - val_accuracy: 0.9836\n",
+      "506/506 [==============================] - 376s 743ms/step - loss: 0.0216 - accuracy: 0.9938 - val_loss: 0.1092 - val_accuracy: 0.9716\n",
       "Epoch 3/5\n",
-      "506/506 [==============================] - 381s 754ms/step - loss: 0.0202 - accuracy: 0.9944 - val_loss: 0.0440 - val_accuracy: 0.9855\n",
+      "506/506 [==============================] - 363s 718ms/step - loss: 0.0145 - accuracy: 0.9959 - val_loss: 0.0274 - val_accuracy: 0.9925\n",
       "Epoch 4/5\n",
-      "506/506 [==============================] - 381s 753ms/step - loss: 0.0062 - accuracy: 0.9983 - val_loss: 0.0293 - val_accuracy: 0.9922\n",
+      "506/506 [==============================] - 330s 653ms/step - loss: 0.0063 - accuracy: 0.9979 - val_loss: 0.0365 - val_accuracy: 0.9905\n",
       "Epoch 5/5\n",
-      "506/506 [==============================] - 388s 766ms/step - loss: 0.0044 - accuracy: 0.9986 - val_loss: 0.0737 - val_accuracy: 0.9811\n"
+      "506/506 [==============================] - 368s 727ms/step - loss: 0.0050 - accuracy: 0.9988 - val_loss: 0.0306 - val_accuracy: 0.9919\n"
      ]
     }
    ],
@@ -430,10 +430,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "281/281 [==============================] - 15s 52ms/step - loss: 0.0674 - accuracy: 0.9824\n",
+      "281/281 [==============================] - 16s 57ms/step - loss: 0.0278 - accuracy: 0.9938\n",
       "Test set\n",
-      "  Loss: 0.067\n",
-      "  Accuracy: 0.982\n"
+      "  Loss: 0.028\n",
+      "  Accuracy: 0.994\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -465,8 +465,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: ../models/fake_news\\assets\n",
-      "WARNING:absl:<keras.layers.recurrent.LSTMCell object at 0x0000025C61B75188> has the same name 'LSTMCell' as a built-in Keras object. Consider renaming <class 'keras.layers.recurrent.LSTMCell'> to avoid naming conflicts when loading with `tf.keras.models.load_model`. If renaming is not possible, pass the object in the `custom_objects` parameter of the load function.\n"
+      "WARNING:absl:<keras.layers.recurrent.LSTMCell object at 0x000002293F724748> has the same name 'LSTMCell' as a built-in Keras object. Consider renaming <class 'keras.layers.recurrent.LSTMCell'> to avoid naming conflicts when loading with `tf.keras.models.load_model`. If renaming is not possible, pass the object in the `custom_objects` parameter of the load function.\n"
      ]
     }
    ],
@@ -483,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -552,42 +551,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Schools All Over America Are Closing On Election Day Due To Fears Of Violence By Michael Snyder, on October 27th, 2016 \n",
-      "Will this be the most chaotic election day in modern American history? All across the nation, schools are being closed on election day due to safety fears. Traditionally, schools have been very popular as voting locations because they can accommodate a lot of people, they usually have lots of parking, and everyone in the community knows where they are and can usually get to them fairly easily. But now there is a big movement to remove voting from schools or to shut schools down on election day so that children are not present when voting takes place. According to Fox News , “voting has been removed or classes have been canceled on Election Day at schools in Illinois, Maine, Nebraska, New Hampshire, Ohio, Pennsylvania, Wisconsin and elsewhere.” Just a couple days ago , I shared with you a survey that found that 51 percent of all Americans are concerned about violence happening on election day, and all of these schools closing is just another sign of how on edge much of the population is as we approach November 8th. \n",
-      "Many officials are being very honest about the fact that schools are being shut down on election day because they are afraid of election violence. The following comes from Fox News … \n",
-      "Several schools across the nation have decided to close on Election Day over fears of possible violence in the hallways stemming from the fallout from the heated rhetoric that consumed the campaign trail. \n",
-      "The fear is the ugliness of the election season could escalate into confrontations and even violence in the school hallways, endangering students. \n",
-      "“If anybody can sit there and say they don’t think this is a contentious election, then they aren’t paying much attention,” Ed Tolan, the Falmouth, Maine police chief, said Tuesday. His community has already called off classes on Nov. 8 and an increased police presence will be felt around town. \n",
-      "And without a doubt, voting locations are “soft targets” that often have little or no security. We have been blessed to have had such peaceful elections in the past, but we also need to realize that times have changed. I believe that there is wisdom in what Georgia Secretary of State Brian Kemp told reporters … \n",
-      "“There is a concern, just like at a concert, sporting event or other public gathering that we didn’t have 15 or 20 years ago,” said Georgia Secretary of State Brian Kemp, co-chairman of the National Association of Secretaries of State election committee. “ What if someone walks in a polling location with a backpack bomb or something? If that happens at a school, then that’s certainly concerning.” \n",
-      "All it is going to take is a single incident to change everything. \n",
-      "Let us hope that it is not this election day when we see something like that. \n",
-      "Another reason why polling locations are under increased scrutiny this election season is because of concerns about election fraud. This is something that Donald Trump has alluded to repeatedly on the campaign trail. For instance, just consider what he told a rally in Pennsylvania … \n",
-      "“We don’t want to lose an election because you know what I’m talking about,” Trump told an overwhelmingly white crowd in Manheim, Pa., earlier this month. “Because you know what? That’s a big, big problem, and nobody wants to talk about it. Nobody has the guts to talk about it. So go and watch these polling places .” \n",
-      "And of course reports are already pouring in from around the country of big problems with the voting machines. In Illinois this week, one candidate personally experienced a machine switching his votes from Republicans to Democrats… \n",
-      "Early voting in Illinois got off to a rocky start Monday, as votes being cast for Republican candidates were transformed into votes for Democrats. \n",
-      "Republican state representative candidate Jim Moynihan went to vote Monday at the Schaumburg Public Library. \n",
-      "“I tried to cast a vote for myself and instead it cast the vote for my opponent,” Moynihan said. “You could imagine my surprise as the same thing happened with a number of races when I tried to vote for a Republican and the machine registered a vote for a Democrat.” \n",
-      "In addition, if you keep up with my work on The Economic Collapse Blog , then you already know that a number of voters down in Texas have reported that their votes were switched from Donald Trump to Hillary Clinton . \n",
-      "Well, it turns out that those voting machines appear to have a link to the Clinton Foundation … \n",
-      "According to OpenSecrets, the company who provided the alleged glitching voting machines is a subsidiary of The McCarthy Group. \n",
-      "The McCarthy group is a major donor to the Clinton Foundation – apparently donating 200,000 dollars in 2007 – when it was the largest owner of United States voting machines. Or perhaps the 200,000 dollars went to paying Bill Clinton for speeches? \n",
-      "Either way, it doesn’t look good. \n",
-      "After everything that we saw in 2012 , I am convinced that there is good reason to be concerned about the integrity of our voting machines. \n",
-      "But Democrats don’t like poll observers, because they think that having too many poll observers will intimidate their voters… \n",
-      "“It’s un-American, but at the same time we have a long history of doing things like that ,” Ari Berman, author of the 2016 book “ Give Us the Ballot: The Modern Struggle for Voting Rights in America ,” previously told The Christian Science Monitor. “Voting was very, very dangerous. I don’t think anyone’s suggesting that we’re at the same place today. I just think the loss of the [official poll observers] is going to be really problematic.” \n",
-      "Without a doubt, this has been the craziest election season that we have seen in decades, and I have a feeling that it is about to get even crazier. \n",
-      "But will the end result be the election of the most corrupt politician in the history of our country ? \n",
-      "If that is the outcome after all that we have been through, it will be exceedingly depressing indeed. \n",
-      "About the author: Michael Snyder is the founder and publisher of The Economic Collapse Blog and End Of The American Dream. Michael’s controversial new book about Bible prophecy entitled “The Rapture Verdict” is available in paperback and for the Kindle on Amazon.com.*\n",
-      "Fake: True\n"
+      "awards season leaders everyone already knew awards season leaders became ever apparent thursday directors guild america revealed nominees top prize damien chazelle la la land garth davis lion barry jenkins moonlight kenneth lonergan manchester sea denis villeneuve arrival real news came announcement nate parker received nomination outstanding achievement director signals redemption sorts mr parker whose awards hopes debut film birth nation torpedoed controversy emerged around rape charges faced acquitted nearly  years ago category nominations also went mr davis second one work lion kelly fremon craig edge seventeen dan trachtenberg  cloverfield lane tim miller whose satirical superhero film deadpool surprise presence years awards race main feature film category notable omissions mel gibson hacksaw ridge martin scorsese whose passion project silence received neither directors guild nomination one producers guild found room deadpool nominations list week taken films shutout screen actors guild award nominations mr scorsese silence guaranteed ignored best picture best director oscar races year academy award nominations announced jan  guild awards given far weight oscars race awards critics journalists represent industry sentiment huge number guild members also belong academy motion picture arts sciences dga award nominations capped busy week began golden globes included nomination announcements producers british academy film television arts also shares members american academy dealing #baftasowhite controversy picking slate lead acting directing nominees taken golden globes wins guild nominations make clear calcification years race around leading contenders la la land front ever\n",
+      "Fake: False\n"
      ]
     }
    ],
@@ -619,17 +591,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "130/130 [==============================] - 14s 110ms/step - loss: 2.0803 - accuracy: 0.5919\n",
-      "Test set\n",
-      "  Loss: 2.080\n",
-      "  Accuracy: 0.592\n"
+      "130/130 [==============================] - 16s 123ms/step - loss: 2.1467 - accuracy: 0.6568\n",
+      "Validation set\n",
+      "  Loss: 2.147\n",
+      "  Accuracy: 0.657\n"
      ]
     }
    ],
