--- a/notebooks/fake_news_dataset_creation.ipynb
+++ b/notebooks/fake_news_dataset_creation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "Name: subject, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -394,20 +394,23 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 50000 entries, 0 to 49999\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column   Non-Null Count  Dtype \n",
-      "---  ------   --------------  ----- \n",
-      " 0   id       50000 non-null  int64 \n",
-      " 1   title    50000 non-null  object\n",
-      " 2   content  50000 non-null  object\n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 1.1+ MB\n"
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   title   50000 non-null  object\n",
+      " 1   text    50000 non-null  object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 781.4+ KB\n"
      ]
     }
    ],
    "source": [
     "# new_true = new_true.sample(n=needed_row_count)\n",
-    "new_true = new_true.drop(columns=['publication', 'url', 'author', 'date', 'year', 'month', 'Unnamed: 0'])\n",
+    "new_true = new_true.drop(columns=['publication', 'url', 'author', 'date', 'year', 'month', 'Unnamed: 0', 'id'])\n",
+    "\n",
+    "# rename content to text in new_true\n",
+    "new_true = new_true.rename(columns={\"content\": \"text\"})\n",
+    "\n",
     "# new_true = new_true.drop(columns=['Unnamed: 0'])\n",
     "new_true.info()\n",
     "new_true = new_true.assign(fake = [False for _ in new_true.iterrows()])\n",
@@ -423,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,19 +450,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "various         0.56775\n",
-       "politicsNews    0.22672\n",
-       "worldnews       0.20553\n",
+       "various         0.567750\n",
+       "politicsNews    0.226075\n",
+       "worldnews       0.206176\n",
        "Name: subject, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
