changed glove notebook

--- a/notebooks/glove_balanced.ipynb
+++ b/notebooks/glove_balanced.ipynb
@@ -253,7 +253,7 @@
     "# compile the model\n",
     "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# summarize the model\n",
+    "# summarize the modele\n",
     "print(model.summary())"
    ]
   },
